fix bug in RouteSegmentMerger, better toString for RouteSegment